--- a/002.org
+++ b/002.org
@@ -177,7 +177,7 @@ Grav jumped up, in part because it was time to get going again, but also in part
 
 "No, think: if disagreeing makes you feel /bad/ and then eventually /crazy/ well...obviously stop disagreeing[fn:: It is worth noting that the men could literally be killed for most of this talk if overheard by any two other Crec. The confidence that they were alone was nearly absolute. No different from assuming you won't some day get hit by a stray arrow.]."
 
-"That's true, brother.", said Gog "I don't even think it takes a bad person, necessarily. Under some circumstances, plain old cavemen will mostly react in the same way. It's not entirely the 'fault' of the individual. It's also not entirely the 'fault' of the circumstances. It's a mix. Like when a lizard-bird's egg just /happen/ to fall into a pond full of crocodile hatchlings. That one lizard-bird pretty much has the productivity of a whole pond to himself[fn:: Yes, Crecspeak has gendered 2nd-person pronouns. And yes they would blithely use this word here.], neatly packaged up."
+"That's true, brother.", said Gog "I don't even think it takes a bad person, necessarily. Under some circumstances, plain old cavemen will mostly react in the same way. It's not entirely the 'fault' of the individual. It's also not entirely the 'fault' of the circumstances. It's a mix. Like when a lizard-bird's egg just /happen/ to fall into a pond full of crocodile hatchlings[fn:: The lizard-bird does not bother to nest or even land to lay its eggs. It simply drops them whilin flight, always over water. The egg floats just under the surface in what is usually a calm, stagnant, warm lake at the hight of summer and then hatches several days later. What emerges has nothing to fear from a crocodile hatchling.]. That one lizard-bird pretty much has the productivity of a whole pond to himself[fn:: Yes, Crecspeak has gendered 2nd-person pronouns. And yes they would blithely use this word here.], neatly packaged up."
 
 "It's not the fault of either, kind of. It just is.", said Grav
 
