--- a/002.org
+++ b/002.org
@@ -185,7 +185,7 @@ Grav jumped up, in part because it was time to get going again, but also in part
 
 They were off in an efficient run immediately.
 
-The place where they would soon arrive was waiting, with it's turned up mud and various mining implements. There were what could be called water-works for processing bulk quantities course, rocky earth for something rare and stubborn.
+The place where they would soon arrive was waiting, with its turned up mud and various mining implements. There were what could be called water-works for processing bulk quantities course, rocky earth for something rare and stubborn.
 
 Gog's helpful contribution, which now looked like a monstrous, tired giraffe leaning over the river as if to drink[fn:: But instead was vomiting ferociously.], was in fact /not/ supposed to be leaning over the river, but no matter. It was a structure that was mostly STRUCTURE. Its long, cantilevered, nearly horizontal span was rather tirelessly engineered, with experiments and all, resulting in a lot of triangles and neatly uniform, arm-thick[fn:: No offense, but /their/ arm, not yours.] spans of twist-vine.
 
