--- a/Appendix.org
+++ b/Appendix.org
@@ -46,6 +46,7 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- Now is your chance: invent an animal that, instead of giving birth, lets its babies gradually it it from the inside out, hunting for food until it becomes impossible, then drops dead and is eaten some more. Then something furry, adorable, and covered with rotted gore climbs out.
 - Wolf-Sleep: To meditate peacefully by actively observing all possible sensory input, minus vision. Learning to actively monitor every inch of your skin, every sound you hear, perhaps the taste of lunch leftover from earlier, one can paradoxically become quite calm and contented. This is called Wolf-Sleep, because once the trick is mastered, practitioners, always observing their breath, from thoat outward, would be able to jump into the relaxed sensation with ever more ease, which reliably made their third, fourth of fifth breath a big, relaxed, satisfying, full-body "huffffffff...." that observers of wolves and modern dog owners are familiar with.
 - "Now, Gak, you've got a situation here with that boy of yours. He's mostly just runnin' around messin' with his stick and hanging out with girls. See, if he was an all-finger or more, that'd be good news for you, 'grandpa', but sometimes it's just unseemly. I saw him smelling a quiet-one's pile. Time was, you could drown a wretched runt like that in the river with a good hemp basket and a rock. The do-gooder Forest-Deer and there meddlin in family life put an end to that! But..."
 - I like the expression "thou dost smite meeee!"[fn:: Notice, not a question like 'why...?', this is The-Ender you are talking to.] as a ritual kind of thing that's as unconscious as "Allahu Akbar" or "Bless You". But screamed at the sky during the hight of frustration, of course. Sometimes, as the "eeeeeeeee" is lengthened, the frustration goes vertical, as someone is high up a tree wrenching on a beehive. Usually, this last jerk of rage-derived power is enough to at least "unstick" the frustrating situation (You might imagine the beehive coming loose and the caveman falling 4 stories onto packed mud, the last 'eeee...' trails off as he lays in his crater.)
