--- a/002.org
+++ b/002.org
@@ -189,7 +189,7 @@ The place where they would soon arrive was waiting, with its turned up mud and v
 
 Gog's helpful contribution, which now looked like a monstrous, tired giraffe leaning over the river as if to drink[fn:: But instead was vomiting ferociously.], was in fact /not/ supposed to be leaning over the river, but no matter. It was a structure that was mostly STRUCTURE. Its long, cantilevered, nearly horizontal span was rather tirelessly engineered, with experiments and all, resulting in a lot of triangles and neatly uniform, arm-thick[fn:: No offense, but /their/ arm, not yours.] spans of twist-vine.
 
-Its justifying feature was a relay of split bamboo culverts that made about a five thumb-pinkie diameter[fn:: Bamboo, being "engineered" for it, can scale even bigger than this. This was not the biggest bamboo available to them, but, yes, it is far larger than anything you may have seen.] channel for water. Big enough for an all-finger child to use as a kind of water slide, which happened only once. All the splicing work had been done expertly, so it was about as water-tight as a stone channel over a rope bridge, but it could /swivel/. It was fed by the river starting about one and half of one boulder-door[fn:: 100]. men upstream.[fn:: As the math is tedious here: about 300 meters. Crec reckoning is covered in the appendix.]
+Its justifying feature was a relay of split bamboo culverts that made about a five thumb-pinkie diameter[fn:: Bamboo, being well "engineered", can scale even bigger than this. This was not the biggest bamboo available to them (although this was definitely on the larger side), but, yes, it is far larger than anything you may have seen.] channel for water. Big enough for an all-finger child to use as a kind of water slide, which happened only once. All the splicing work had been done expertly, so it was about as water-tight as a stone channel over a rope bridge, but it could /swivel/. It was fed by the river starting about one and half of one boulder-door[fn:: 100]. men upstream.[fn:: As the math is tedious here: about 300 meters. Crec reckoning is covered in the appendix.]
 
 The floating-sluice swiveled expertly on a conveniently already extant poplar tree[fn:: Pronounced 'wazlic'] about 10 man high and one and one half man around at the base. It had a polished, dense, shiny sections at intervals where the oiled oak bearings burnished the wood, once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluice itself ran out to a fixed 12 men length and continuously gave a heavy, ongoing, cold, laminar xxxwhindingxxx punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed three man deep.
 
