--- a/002.org
+++ b/002.org
@@ -191,7 +191,7 @@ Gog's helpful contribution, which now looked like a monstrous, tired giraffe lea
 
 Its justifying feature was a relay of split bamboo culverts that made about a five thumb-pinkie diameter[fn:: Bamboo, being well "engineered", can scale even bigger than this. This was not the biggest bamboo available to them (although this was definitely on the larger side), but, yes, it is far larger than anything you may have seen.] channel for water. Big enough for an all-finger child to use as a kind of water slide, which happened only once. All the splicing work had been done expertly, so it was about as water-tight as a stone channel over a rope bridge, but it could /swivel/. It was fed by the river starting about one and half of one boulder-door[fn:: 100]. men upstream.[fn:: As the math is tedious here: about 300 meters. Crec reckoning is covered in the appendix.]
 
-The floating-sluice swiveled expertly on a conveniently already extant poplar tree[fn:: Pronounced 'wazlic'] about 10 man high and one and one half man around at the base. It had a polished, dense, shiny sections at intervals where the oiled oak bearings burnished the wood, once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluice itself ran out to a fixed 12 men length and continuously gave a heavy, ongoing, cold, laminar xxxwhindingxxx punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed three man deep.
+The floating-sluice swiveled expertly on a conveniently already extant poplar tree[fn:: Pronounced 'wazlic'] about 10 man high and one and one half man around at the base. It had a polished, dense, shiny sections at intervals where the oiled oak bearings burnished the wood, once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluice itself ran out to a fixed 12 men length and continuously gave a heavy, ongoing, cold, laminar punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed three man deep.
 
 The poplar had been chosen for its straightness (among other things). With a bit of fine-tuning, the sluice could be leveled such that two men could work it long pieces of twist-vine.
 
