--- a/002.org
+++ b/002.org
@@ -193,11 +193,11 @@ Its justifying feature was a relay of split bamboo culverts that made about a fi
 
 The floating-sluice swiveled expertly on a conveniently already extant poplar tree[fn:: Pronounced 'wazlic'] about 10 man high and one and one half man around at the base. It had a polished, dense, shiny sections at intervals where the oiled oak bearings burnished the wood, once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluice itself ran out to a fixed 12 men length and continuously gave a heavy, ongoing, cold, laminar punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed three man deep.
 
-The poplar had been chosen for its straightness (among other things). With a bit of fine-tuning, the sluice could be leveled such that two men could work it long pieces of twist-vine.
+The poplar had been chosen for its straightness (among other things). With a bit of fine-tuning, the sluice could be tuned and squared up such that two men could work it with long pieces of twist-vine, and some heaving.
 
-It could be shortened at will, down to just over 9 man. So they had a three-man wide ring (with a break where the sluice was fed from high above, by a raised spill way ), with an outside diameter of 12 man of working area, when viewed from a hawk's flight.
+It could be shortened at will, down to just over 9 man. Viewed from above, this created a working area in the shape of a three-man wide "ring", with an outside radius of 12 man. There was a one-part-out-of-ten[fn:: The Crec just talk in terms of fractional circles, not "degrees" for example.] pie slice in the ring where the spillway works fed the sluice.
 
-This gave the two men a lot of destructive potential from the local ecology's point of view. They had been making good use of it. One might think that you methodically slice out laser portions of this great ring and patiently sort through what results, and it does go this way in some places. In most places, the pounding water would just completely blast away whatever it was slung over.
+This gave the two men and their "concern" a lot of destructive potential from the local ecology's point of view. They had been making good use of it. One might think that you methodically blast away sections of this great ring and patiently sort through what comes up, and it does go this way in some places. In most places, the pounding water would just completely blast away whatever it was slung over. /Getting/ to that stuff without wasting time or missing anything valuable was the trick.
 
 You could position this blast-zone by swinging the sluice over the un-mined bits slowly, so that it gently (as it were) eats into virgin river bed. The force of the water was such that more than just silt and pebbles got stirred up. Head-sized boulders would swirl merrily in this twisting torus of purposeful erosion.
 
