--- a/Appendix.org
+++ b/Appendix.org
@@ -46,6 +46,10 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 
 * Notes
 
+- At some point, the sluice encounters a low cliff on the riverbank. They find /booones/!
+- Numbers are wordy in order to put us in a frame of mind where abstract numbers are "novel", as they are to them.
+- Somebody notices that if you twist three fibers one way and wound them the /other/ way, you'd have some twist-vine that is not bouncy and doesn't twist when it's not supposed to.
+- There needs to be Ernest. T. Bass/Leroy Jenkins character that is nice-junlge-term-for-crazy and injects harmless randomness all the time.
 - Now is your chance: invent an animal that, instead of giving birth, lets its babies gradually it it from the inside out, hunting for food until it becomes impossible, then drops dead and is eaten some more. Then something furry, adorable, and covered with rotted gore climbs out.
 - Wolf-Sleep: To meditate peacefully by actively observing all possible sensory input, minus vision. Learning to actively monitor every inch of your skin, every sound you hear, perhaps the taste of lunch leftover from earlier, one can paradoxically become quite calm and contented. This is called Wolf-Sleep, because once the trick is mastered, practitioners, always observing their breath, from thoat outward, would be able to jump into the relaxed sensation with ever more ease, which reliably made their third, fourth of fifth breath a big, relaxed, satisfying, full-body "huffffffff...." that observers of wolves and modern dog owners are familiar with.
 - "Now, Gak, you've got a situation here with that boy of yours. He's mostly just runnin' around messin' with his stick and hanging out with girls. See, if he was an all-finger or more, that'd be good news for you, 'grandpa', but sometimes it's just unseemly. I saw him smelling a quiet-one's pile. Time was, you could drown a wretched runt like that in the river with a good hemp basket and a rock. The do-gooder Forest-Deer and there meddlin in family life put an end to that! But..."
