--- a/002.org
+++ b/002.org
@@ -193,7 +193,7 @@ Its justifying feature was a relay of split bamboo culverts that made about a fi
 
 The floating-sluice swiveled expertly on a conveniently already extant poplar tree[fn:: Pronounced 'wazlic'] about 10 man high and one and one half man around at the base. It had a polished, dense, shiny sections at intervals where the oiled oak bearings burnished the wood, once worked in, the wood was like smooth, ancient stone. This bit of the rigging would last forever. The sluice itself ran out to a fixed 12 men length and continuously gave a heavy, ongoing, cold, laminar punch into whatever it was hanging over. Left overnight, it would gouge a parabolic hole into the river bed three man deep.
 
-The poplar had been chosen for its straightness (among other things). With a bit of fine-tuning, the sluice could be tuned and squared up such that two men could work it with long pieces of twist-vine, and some heaving.
+The poplar had been chosen for its straightness (among other things). With a bit of patience, the sluice could be tuned and squared up such that two men could work it with long pieces of twist-vine, and some heaving.
 
 It could be shortened at will, down to just over 9 man. Viewed from above, this created a working area in the shape of a three-man wide "ring", with an outside radius of 12 man. There was a one-part-out-of-ten[fn:: The Crec just talk in terms of fractional circles, not "degrees" for example.] pie slice in the ring where the spillway works fed the sluice.
 
