--- a/002.org
+++ b/002.org
@@ -199,7 +199,7 @@ It could be shortened at will, down to just over 9 man. Viewed from above, this 
 
 This gave the two men and their "concern" a lot of destructive potential from the local ecology's point of view. They had been making good use of it. One might think that you methodically blast away sections of this great ring and patiently sort through what comes up, and it does go this way in some places. In most places, the pounding water would just completely blast away whatever it was slung over. /Getting/ to that stuff without wasting time or missing anything valuable was the trick.
 
-You could position this blast-zone by swinging the sluice over the un-mined bits slowly, so that it gently (as it were) eats into virgin river bed. The force of the water was such that more than just silt and pebbles got stirred up. Head-sized boulders would swirl merrily in this twisting torus of purposeful erosion.
+You could position this blast-zone by swinging the sluice over the un-mined bits slowly, so that it gently (as it were) eats into virgin river bed[fn:: Of course, the river is not a circle. The sluice's arc went over riverbank, ancient riverbed, low cliffs and the like.]. The force of the water was such that more than just silt and pebbles got stirred up. Head-sized boulders would swirl merrily in this twisting torus of purposeful erosion.
 
 "River-Fist", the Workers had named this exciting part of the destruction. After escaping from the more intense parts of the torrent, with a smooth under-hand toss from the deepest part of the tight, symmetrical vortex, over the berm created by the advance of the River-Fist. This was where the Feelers worked, so far, downstream of the River-Fist. They were not in great danger, usually, but they were tethered for safety. The river water, being completely opaque here for obvious reasons, required Feelers to fish around with their feet and stoop, but hopefully not /dive/ down to fetch whatever healthy-sized rock was there and heave it onto the bank, which was tended by rather relaxed crew of Soon-Leave to ensure these did not fall back wastefully. They maintained a berm to check the rocks and boulders soundly, and sometimes helped with the heaving, with an especially stubborn rock. Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a bunch of smart monkeys, uniformly brown monkeys working intensely on some vast, seemingly pointless project.
 
