--- a/002.org
+++ b/002.org
@@ -203,7 +203,7 @@ You could position this blast-zone by swinging the sluice over the un-mined bits
 
 "River-Fist", the Workers had named this exciting part of the destruction. 
 
-Irregular, jagged rocks weighing up to about 30 gourd[fn:: A "gourd" was a unit of both mass and volume. Its mass worked out to just over a half a kilogram. Its volume was of course the volume of just over a kilogram of water. It works out to roughly one pound (mass) or two "modern" cups of water.] would be tossed at more or less at random by all this mostly toroidal swirl of water. 
+Irregular, jagged rocks weighing up to about 30 gourd[fn:: A "gourd" was a unit of both mass and volume. Its mass worked out to just over a half a kilogram. Its volume was of course the volume of just over a kilogram of water. It works out to roughly one pound (mass) or two 'modern' cups of water.] would be tossed at more or less at random by all this mostly toroidal swirl of water. 
 
 After escaping from the more intense parts of the torrent, with a smooth under-hand toss from the deepest part of the tight, symmetrical vortex, over the berm created by the advance of the River-Fist.
 
