--- a/002.org
+++ b/002.org
@@ -203,11 +203,15 @@ You could position this blast-zone by swinging the sluice over the un-mined bits
 
 "River-Fist", the Workers had named this exciting part of the destruction. 
 
-Irregular, jagged rocks weighing up to about 30 gourd[fn:: A "gourd" was a unit of both mass and volume. Its mass worked out to just over a half a kilogram. Its volume was of course the volume of just over a kilogram of water. It works out to roughly one pound (mass) or two 'modern' cups of water.] would be tossed at more or less at random by all this mostly toroidal swirl of water. 
+Irregular, jagged rocks weighing up to about 30 gourd[fn:: A "gourd" was a unit of both mass and volume. Its mass worked out to just over a half a kilogram. Its volume was of course the volume of just over a kilogram of water. It works out to roughly one pound (mass) or two 'modern' cups of water.] would be tossed at more or less at random by all this mostly toroidal swirl of water.
 
-After escaping from the more intense parts of the torrent, with a smooth under-hand toss from the deepest part of the tight, symmetrical vortex, over the berm created by the advance of the River-Fist.
+The higher a rock ended up on the parabolic cavity made by the River-Fist, the longer it stayed there. Rocks that happen to land toward the bottom are knocked around until they get sucked up by the River-Fist again, for another go.
 
-This was where the Feelers worked, so far, downstream of the River-Fist. They were not in great danger, usually, but they were tethered for safety. The river water, being completely opaque here for obvious reasons, required Feelers to fish around with their feet and stoop, but hopefully not /dive/ down to fetch whatever healthy-sized rock was there and heave it onto the bank, which was tended by rather relaxed crew of Soon-Leave to ensure these did not fall back wastefully. They maintained a berm to check the rocks and boulders soundly, and sometimes helped with the heaving, with an especially stubborn rock. Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a bunch of smart monkeys, uniformly brown monkeys working intensely on some vast, seemingly pointless project.
+The highest-up of these rocks, if they passed even the most cursory inspection for potential got fetched by some brave, mostly tethered Workers and were thrown as far from the current work area as possible (usually a particular direction or area that was carefully selected after much consideration.)
+
+These where the "Feelers". The river water, being completely opaque here for obvious reasons, required Feelers to fish around with their feet and stoop, but hopefully not /dive/ down to fetch whatever healthy-sized rock was there and heave it at least /towards/ the prescribed direction. This area was often tended by rather relaxed crew of Soon-Leave to ensure, depending, these did not fall into the river or otherwise go missing. They might maintain a berm to check the rocks and boulders at risk of falling back in, and sometimes helped with the heaving, with an especially stubborn rock.
+
+Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a bunch of smart monkeys, uniformly brown monkeys working intensely on some vast, seemingly pointless project.
 
 They hadn't had the Feelers until about three-part-of-four moons[fn:: About three weeks] ago. Inevitably some Worker's child would be flailing around in the already-worked areas and helpfully point out a healthy sized rock that deserved examination. And, quite rarely, but not never did this turn out to be a real value-stone of a value-stone.
 
