--- a/002.org
+++ b/002.org
@@ -205,9 +205,9 @@ You could position this blast-zone by swinging the sluice over the un-mined bits
 
 Irregular, jagged rocks weighing up to about 30 gourd[fn:: A "gourd" was a unit of both mass and volume. Its mass worked out to just over a half a kilogram. Its volume was of course the volume of just over a kilogram of water. It works out to roughly one pound (mass) or two 'modern' cups of water.] would be tossed more or less at random by all this mostly toroidal swirl of water.
 
-The higher a rock ended up on the parabolic cavity made by the River-Fist, the longer it stayed there. Rocks that happen to land toward the bottom are knocked around until they get sucked up by the River-Fist again, for another go.
+The higher a rock ended up on the parabolic cavity made by the River-Fist, the longer it stayed there. Rocks that happen to land toward the bottom of the gouge got knocked around until they were sucked up by the River-Fist again, for another go.
 
-The highest-up of these rocks, if they passed even the most cursory inspection for potential got fetched by some brave, mostly tethered Workers and were thrown as far from the current work area as possible (usually a particular direction or area that was carefully selected after much consideration.)
+The highest-up of these rocks, if they passed even the most cursory inspection for potential got fetched by some brave, mostly tethered Workers and were thrown as far from the current work area as possible, usually a particular direction or area that was carefully selected after much consideration.
 
 These where the "Feelers". The river water, being completely opaque here for obvious reasons, required Feelers to fish around with their feet and stoop, but hopefully not /dive/ down to fetch whatever healthy-sized rock was there and heave it at least /towards/ the prescribed direction. This area was often tended by rather relaxed crew of Soon-Leave to ensure, depending, these did not fall into the river or otherwise go missing. They might maintain a berm to check the rocks and boulders at risk of falling back in, and sometimes helped with the heaving, with an especially stubborn rock.
 
