--- a/002.org
+++ b/002.org
@@ -209,15 +209,15 @@ The higher a rock ended up on the parabolic cavity made by the River-Fist, the l
 
 The highest-up of these rocks, if they passed even the most cursory inspection for potential got fetched by some brave, mostly tethered Workers and were thrown as far from the current work area as possible, usually a particular direction or area that was carefully selected after much consideration.
 
-These where the "Feelers". The river water, being completely opaque here for obvious reasons, required Feelers to fish around with their feet and stoop, but hopefully not /dive/ down to fetch whatever healthy-sized rock was there and heave it at least /towards/ the prescribed direction. This area was often tended by rather relaxed crew of Soon-Leave to ensure, depending, these did not fall into the river or otherwise go missing. They might maintain a berm to check the rocks and boulders at risk of falling back in, and sometimes helped with the heaving, with an especially stubborn rock.
+These where the "Feelers". The river water, being completely opaque here for obvious reasons, required Feelers to fish around with their feet and stoop, but hopefully not /dive/ down to fetch whatever healthy-sized rock was there and heave it at least /towards/ the prescribed direction.
 
-Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a bunch of smart monkeys, uniformly brown monkeys working intensely on some vast, seemingly pointless project.
+This area was often tended by rather relaxed crew of Soon-Leave to ensure, depending on circumstances, that the newly-mined rocks did not fall into the river or otherwise go missing. They might maintain a berm to check the rocks and boulders at risk of falling back in, and sometimes helped with the heaving, with an especially stubborn rock. A lot of what the Soon-Leave did depended on "circumstances".
 
-They hadn't had the Feelers until about three-part-of-four moons[fn:: About three weeks] ago. Inevitably some Worker's child would be flailing around in the already-worked areas and helpfully point out a healthy sized rock that deserved examination. And, quite rarely, but not never did this turn out to be a real value-stone of a value-stone.
+Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a troupe of especially smart, uniformly brown monkeys working intensely on some vast, seemingly pointless project.
 
-]]]iamlost]]] These and lots of others were getting re-buried. They had just been counting on value-stone being be a certain size and no bigger, having seen all their lives the /results/ of all the endless digging and working some piece of rock until it's ready for sale in the market.
+They hadn't had the Feelers until about three-part-of-four moons[fn:: About three weeks] ago. Inevitably some Worker's child would be flailing around in the already-worked areas and helpfully point out a healthy sized rock that deserved examination. And, quite rarely, but not never did this turn out to be a real value-stone of a value-stone. Before, they had only been collecting stones small enough to fetch as the were cast up near the surface and there was general sorting and sifting of the surrounding, more convenient work areas. And so a new specialty had been born.
 
-The truth was as sloppy and inexact as the xxxworldxxx itself. Sometimes you would pick up a big, plain looking rock only to have it split in half as you're balancing it on your chest and hauling it (out of the way?) You look one side and then the other to see the upturned inner part of the rock glittering with value-stone, often in fascinating patterns. That rock might in turn have an ambling-feast[fn:: Wooly Mammoth] carcass worth of value-stones throughout its "flesh"[fn:: Grav and Gog use this to refer to he useless part of a value-stone bearing rock.] or it might contain nothing of note.
+The truth was as sloppy and inexact as Nature[fn:: In addition to having the same sense that we do for this word, the Crec overloaded it with "The Whole World" or possibly "The Universe" for the more general-minded Crec.] itself. Sometimes you would pick up a big, plain looking rock only to have it split in half as you're balancing it on your chest and hauling it (out of the way?) You look one side and then the other to see the upturned inner part of the rock glittering with value-stone, often in fascinating patterns. That rock might in turn have an ambling-feast[fn:: Wooly Mammoth] carcass worth of value-stones throughout its "flesh"[fn:: Grav and Gog use this to refer to he useless part of a value-stone bearing rock.] or it might contain nothing of note.
 
 This was all a lot of work, in case you hadn't guessed.
 
