--- a/Appendix.org
+++ b/Appendix.org
@@ -47,6 +47,7 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 * Notes
 
 - At some point, the sluice encounters a low cliff on the riverbank. They find /booones/!
+- Mmaybe something so valuable is found that we have to start worrying about theft at the mine.
 - Some one gets trapped in the River-Fist. You just get pushed down there and twist and twist and twist along with a bunch of rocks. The only salvation is either to move the sluce (maybe it's wedged in place for some reason) or to install the "boar", which the Workers, in their panic, drop over the side, 8 men (or something) down below. Oh! Noes!
 - Numbers are wordy in order to put us in a frame of mind where abstract numbers are "novel", as they are to them.
 - Somebody notices that if you twist three fibers one way and wound them the /other/ way, you'd have some twist-vine that is not bouncy and doesn't twist when it's not supposed to.
