--- a/002.org
+++ b/002.org
@@ -215,13 +215,13 @@ This area was often tended by rather relaxed crew of Soon-Leave to ensure, depen
 
 Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a troupe of especially smart, uniformly brown monkeys working intensely on some vast, seemingly pointless project.
 
-They hadn't had the Feelers until about three-part-of-four moons[fn:: About three weeks] ago. Inevitably some Worker's child would be flailing around in the already-worked areas and helpfully point out a healthy sized rock that deserved examination. And, quite rarely, but not never did this turn out to be a real value-stone of a value-stone. Before, they had only been collecting stones small enough to fetch as the were cast up near the surface and there was general sorting and sifting of the surrounding, more convenient work areas. And so a new specialty had been born.
+They hadn't had the Feelers until about three-part-of-four moons[fn:: About three weeks] ago. Inevitably some Worker's child would be flailing around in the already-worked areas and helpfully point out a healthy sized rock that deserved examination. And, quite rarely, but not never did this turn out to be a real value-stone of a value-stone. Before, they had only been collecting stones small enough to fetch as the were cast up near the surface and there had been general sorting and sifting of the surrounding, more convenient work areas. Having learned that some of the massive rocks were worth their while, a new career track had been born.
 
 This was all a lot of work, in case you hadn't guessed.
 
-Downstream of the Feelers were, with the size and age of the caveperson descending as we go downstream, were a squirrel-hoard of Feeler-Lookers, who of course had to both feel and look for any rock, according to guidelines regularly communicated, drilled upon, and featured in the mandatory training skit, were nervous new-hires would sit uncomfortably, watching the Training Troupe explain the criteria by which they were to identify and handle potential value-stone. And they were many[fn:: Appendix].
+Downstream of the Feelers were, with the size and age of the caveperson descending as we go downstream, were a squirrel-hoard of Feeler-Lookers, who of course had to both feel and look for any rock, according to guidelines regularly communicated, drilled upon, and featured in the mandatory training skit, where nervous new-hires would sit uncomfortably, watching the Worker Onboarding Troupe explain the criteria by which they were to identify and handle potential value-stone. And they were many[fn:: Appendix].
 
-Downstream of the Feeler-Lookers were, of course, the Lookers. These were the youngest and smallest, and the broad, shallow, and now comparatively gentle Lame Rhino. To the extent possible, Gog[fn:: Who somehow ended up with the "cavepeople problems."] would only hire the more clever children for this role. It was easy physically, but it was important and so needed to be done right; to the extent possible.
+Downstream of the Feeler-Lookers were, of course, the Lookers. These were the youngest and the smallest. The broad, shallow, and now comparatively gentle Lame Rhino. To the extent possible, Gog[fn:: Who somehow ended up with the "cavepeople problems."] would only hire the more clever children for this role. It was easy physically, but it was important and so needed to be done right; to the extent possible.
 
 The Lookers' job was to accurately discover evidence that the sluice was encountering value-butter[fn:: Gold]. A river like The Lame Rhino always had flakes of mica and pyrite[fn:: Which they had names for] and these had to be distinguished from value-butter. If even a only flake or two was seen and confidently identified (Gog was always working on an accurate read of 'confident' with these most unsophisticated Workers. It was an ongoing dance.) a number of things were to happen with purposefulness and promptness.
 
