--- a/002.org
+++ b/002.org
@@ -211,7 +211,7 @@ The highest-up of these rocks, if they passed even the most cursory inspection f
 
 These where the "Feelers". The river water, being completely opaque here for obvious reasons, required Feelers to fish around with their feet and stoop, but hopefully not /dive/ down to fetch whatever healthy-sized rock was there and heave it at least /towards/ the prescribed direction.
 
-This area was often tended by rather relaxed crew of Soon-Leave to ensure, depending on circumstances, that the newly-mined rocks did not fall into the river or otherwise go missing. They might maintain a berm to check the rocks and boulders at risk of falling back in, and sometimes helped with the heaving, with an especially stubborn rock. A lot of what the Soon-Leave did depended on "circumstances".
+This area was often tended by a rather relaxed crew of Soon-Leave to ensure, depending on circumstances, that the newly-mined rocks did not fall into the river or otherwise go missing. They might maintain a berm to check the rocks and boulders at risk of falling back in, depending on circumstances, or sometimes help with the heaving of an especially stubborn rock. A lot of what the Soon-Leave did depended on "circumstances".
 
 Everybody was naked, boys and baby-makers, and covered entirely in smooth, rich clay. It had the look of a troupe of especially smart, uniformly brown monkeys working intensely on some vast, seemingly pointless project.
 
@@ -219,11 +219,11 @@ They hadn't had the Feelers until about three-part-of-four moons[fn:: About thre
 
 This was all a lot of work, in case you hadn't guessed.
 
-Downstream of the Feelers were, with the size and age of the caveperson descending as we go downstream, were a squirrel-hoard of Feeler-Lookers, who of course had to both feel and look for any rock, according to guidelines regularly communicated, drilled upon, and featured in the mandatory training skit, where nervous new-hires would sit uncomfortably, watching the Worker Onboarding Troupe explain the criteria by which they were to identify and handle potential value-stone. And they were many[fn:: Appendix].
+Downstream of the Feelers were, with the size and age of the caveperson descending as we go downstream, were a squirrel-hoard of Feeler-Lookers[fn:: "Rock-Lookers" before the adjustments.], who of course had to both feel and look for any rock, according to guidelines regularly communicated, drilled upon, and featured in the mandatory training skit, where nervous new-hires would sit uncomfortably, watching the Worker Onboarding Troupe explain the criteria by which they were to identify and handle potential value-stone. And they were many[fn:: TBD, Appendix].
 
-Downstream of the Feeler-Lookers were, of course, the Lookers. These were the youngest and the smallest. The broad, shallow, and now comparatively gentle Lame Rhino. To the extent possible, Gog[fn:: Who somehow ended up with the "cavepeople problems."] would only hire the more clever children for this role. It was easy physically, but it was important and so needed to be done right; to the extent possible.
+Downstream of the Feeler-Lookers were, of course, the Lookers. These were the youngest and the smallest, safe in the broad, shallow, and now comparatively gentle Lame Rhino. To the extent possible, Gog[fn:: Who somehow ended up with the "cavepeople problems."] would only hire the more clever children for this role. It was easy physically, but it was important and so needed to be done right; to the extent possible.
 
-The Lookers' job was to accurately discover evidence that the sluice was encountering value-butter[fn:: Gold]. A river like The Lame Rhino always had flakes of mica and pyrite[fn:: Which they had names for] and these had to be distinguished from value-butter. If even a only flake or two was seen and confidently identified (Gog was always working on an accurate read of 'confident' with these most unsophisticated Workers. It was an ongoing dance.) a number of things were to happen with purposefulness and promptness.
+The Lookers' job was to look for anything of value at all, but especially try to /accurately/ discover evidence that the sluice was encountering value-butter[fn:: Gold]. A river like The Lame Rhino always had flakes of mica and pyrite[fn:: Which they had names for] and these had to be distinguished from value-butter. If even a only flake or two was seen and confidently identified (Gog was always working on an accurate read of 'confident' with these most unsophisticated Workers. It was an ongoing dance.) a number of things were to happen with purposefulness and promptness.
 
 First, the river was diverted to a degree, depending on urgency, second the sluice was stopped.
 
