--- a/002.org
+++ b/002.org
@@ -233,7 +233,7 @@ The sluice was "disarmed", as they termed it, first by a shout to the spillway U
 
 The Unit-Leader would then turn, nod to his subordinate Workers, and unfold his arms to make a vague "get on with it" gesture. The Workers would place a smartly shaped rock called a "boar" in the spillway feeding the sluice and the incoming water, moving at about two man per drop-stone, would hit this specially shaped stone, causing it to create a great "fan" of water, mostly in the vertical direction but slightly off-center. Modern readers who have seen a snow plow will have a good mental starting point.
 
-By the time the water came back down to the level of the spill way, after shooting up (mostly) it was about as destructive as a thrice-in-life very heavy rain. By the time it got down to the great pylons supporting the raised spillway, it was pretty much like a regular afternoon summertime sky-draining. The youngest and least employed played wildly under the heavy, cold shower. Small-ones[fn:: Toddlers. Contrast "quiet-ones"] usually outnumbered the older, working people. Some of them were there with mother or father. Some of them just showed up, and sometimes even spoke fluently in an unknown tongue, and no other.
+By the time the water came back down to the level of the spill way, after shooting up (mostly) it was about as destructive as a thrice-in-life very heavy rain. By the time it got down to the great pylons supporting the raised spillway, it was pretty much like a five-year strong afternoon summertime sky-draining. The youngest and least employed played wildly under the heavy, cold shower. Small-ones[fn:: Toddlers. Contrast "quiet-ones"] usually outnumbered the older, working people. Some of them were there with mother or father. Some of them just showed up, and sometimes even spoke fluently in an unknown tongue, and no other. In the latter case, they would usually disappear after all-finger day or so, but the stock would replenish. They were pretty mysterious and impish, thought most of the Crec. /But children are children/, they thought.
 
 Today however, it was 'quiet', as the mine goes. The sluice, while destructive, made no more noise than the surrounding river system. The sluice continued to unload its column of vast weight into the cold river.
 
