--- a/002.org
+++ b/002.org
@@ -239,7 +239,7 @@ Today however, it was 'quiet', as the mine goes. The sluice, while destructive, 
 
 Grav had decided, and Gog had not objected, to leave the sluice running while the site was unattended. This would keep the wood wet, and not cause undue wear to the spillway trestle work that surely will add up one day, given enough overuse of the boar. This required someone to remember to stop the advance of the sluice at about one palm from quitting time and let the various lookers and feelers do their work, with increasingly less excitement, until there was enough agreement that nothing more was going to be stirred up. If they were in a hurry (everyone had a schedule) they might back up the sluice instead. This, practice vaguely irked the two men.
 
-Grav and Gog made it into the first clearing of the site, stopping from what had become a near sprint; the obstacles to forward progress haven gotten scarce in the last boulder-door men[fn:: A caveperson's capacity to run through any kind of terrain, keeping the fastest pace allowed by circumstances is practically limitless. The idea was to keep up speed, unless there is a reason not to. There are always rests, but if you /can/ run fast you /do/ run fast (unless there is a reason not to.)]. They were winded but no yet out of breath.
+Grav and Gog made it into the first clearing of the site, stopping from what had become a near sprint; the obstacles to forward progress haven gotten scarce in the last boulder-door men[fn:: A caveperson's capacity to run through any kind of terrain, keeping the fastest pace allowed by circumstances is practically limitless. The idea was to keep up speed, unless there is a reason not to. There are always rests, but if you /can/ run fast you /do/ run fast (unless there is a reason not to.)]. They were winded but not yet out of breath.
 
 Panting, Gog said, "Let's put in a short day, eh? We'll sit in our office[fn:: This word is chosen because G&G's 'office' was a particular place with a particular purpose and so isn't just some rock next to a tree. They would say 'office' if they could.] and plan a bit more."
 
