--- a/002.org
+++ b/002.org
@@ -249,11 +249,13 @@ The two men headed down a path that most expediently took them to an area that i
 
 After knocking out a lot of growth they were pleased to find that they had a dappling of sunlight for most of the day provided by a mesh above of healthy[fn:: G&G had a Worker dedicated to caring for what they called their 'office-plants'.] variegated, fat, yellow-green leaves sprouting from a cobweb of very determined vine whose corresponding anchoring to the ground was hopelessly undeterminable. It was like a fabric woven of living vine, truly.
 
+Not telling Gog, Grav would occasionally find an interesting stem to clip near the ground just to admire the unpredictable lightening-bolt path the murdered vine would trace out. Gog was irked, Grav got some fun out of it. The vine's would more than grow back either way. Gog eventually got determined and after a lot of spying evetnually found a cleanly snipped vine near the ground, one or two man into the thick web of vine, which is a trick to do if your goal is to not kill anything else. Gog was still considering what to do with this evidence.
+
 Grav took to his ham-stone and propped his bare, black feet up on the sand-draw table, that had various important-looking writings on it that each man simply assumed was important, written by the other, and therefor not subject to erasure.
 
 "Oh, I forgot to mention. Father-Brother Verk said that if I found a three deer carcass value-stone, I could skip club-drill.
 
-He looked at his left nipple, wrinkling his chin with his determination to get a better look. Gog looked without being seen.
+He looked at his left nipple, wrinkling his chin with his determination to get a better look. Gog looked back without being seen.
 
 "I, uh, said I'd bring him such a stone and /also/ attend drill."
 
