--- a/002.org
+++ b/002.org
@@ -247,7 +247,7 @@ Panting, Gog said, "Let's put in a short day, eh? We'll sit in our office[fn:: T
 
 The two men headed down a path that most expediently took them to an area that is 1) far from the river and 2) dense with lush, pleasant jungle. Their office was a clearing in such a place, given the possibly overly enthusiastic effort by both to find the "densest" jungle, the office had a roof! The jungle was more 'carved' here, in three dimensions.
 
-After knocking out a lot of growth they were pleased to find that they had a dappling of sunlight for most of the day provided by a mesh above of healthy[fn:: G&G had a Worker dedicated to caring for what they called their 'office-plants'.] variegated, fat, yellow-green leaves sprouting from a cobweb of very determined vine whose corresponding anchoring to the ground was hopelessly undeterminable. It was like a fabric woven of living vine, truly.
+After knocking out a lot of growth they were pleased to find that they had a dappling of sunlight for most of the day provided by a mesh above of healthy[fn:: G&G had a Worker dedicated to caring for what they called their 'office-plants', which for here included some structural engineering skills as well.] variegated, fat, yellow-green leaves sprouting from a cobweb of very determined vine whose corresponding anchoring to the ground was hopelessly undeterminable. It was like a fabric woven of living vine, truly.
 
 Not telling Gog, Grav would occasionally find an interesting stem to clip near the ground just to admire the unpredictable lightening-bolt path the murdered vine would trace out inside the cube. Gog was irked, Grav got some fun out of it. The vine's would more than grow back either way.
 
